# technical-analysis-framework

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  FINANCIAL_PROFESSIONALS_GUIDE.md  QUICKSTART.md  USER_GUIDE.md
ta_framework/: __init__.py
ta_framework/analytics/: __init__.py  benchmark.py  metrics.py  regime.py  tearsheet.py
ta_framework/backtest/: __init__.py  costs.py  engine.py  monte_carlo.py  optimization.py  results.py
ta_framework/core/: __init__.py  config.py  exceptions.py  registry.py  types.py
ta_framework/data/: __init__.py  base.py  ccxt_provider.py  csv_provider.py  quality.py  timeframe.py  yfinance_provider.py
ta_framework/indicators/: __init__.py  catalog.py  composite.py  custom.py  engine.py  wrappers.py
ta_framework/pages/: analysis.py  backtester.py  compare.py  components.py  dashboard.py
ta_framework/risk/: __init__.py  portfolio.py  position_sizing.py  stops.py  var.py
ta_framework/signals/: __init__.py  base.py  composite.py  rules.py  strategies.py
ta_framework/viz/: __init__.py  charts.py  distribution.py  drawdown.py  heatmaps.py  trade_plots.py
tests/: conftest.py  test_analytics.py  test_backtest.py  test_data_providers.py  test_indicators.py  test_risk.py  test_signals.py
